--- a/themes/adritian-free-hugo-theme/layouts/game/single.html
+++ b/themes/adritian-free-hugo-theme/layouts/game/single.html
@@ -1,4 +1,4 @@
 {{ define "main" }}
 <h1>{{ .Title }}</h1>
-<iframe src="https://williamarnberg.github.io/Portfolio/game/index.html" width="800" height="600"></iframe>
+<iframe src="/game/index.html" width="800" height="600"></iframe>
 {{ end }}
