--- a/themes/adritian-free-hugo-theme/layouts/shortcodes/wasm_game.html
+++ b/themes/adritian-free-hugo-theme/layouts/shortcodes/wasm_game.html
@@ -1,3 +1,3 @@
 <div id="wasm-game-container">
-    <iframe src="https://williamarnberg.github.io/Portfolio/game/index.html" width="800" height="600" style="border: none;"></iframe>
+    <iframe src="https://williamarnberg.com/game/index.html" width="800" height="600" style="border: none;"></iframe>
 </div>
