--- a/themes/adritian-free-hugo-theme/assets/scss/adritian.scss
+++ b/themes/adritian-free-hugo-theme/assets/scss/adritian.scss
@@ -5,14 +5,14 @@
 
 /** main style **/
 .header .navbar-brand span:first-child{
-    color: #478079;
+    color: #8BAAAD;
 }
 .header .container{
     padding-left: 10px;
 }
 
 html body ::selection{
-    background-color:#488079;color:#fff
+    background-color:#8BAAAD;color:#fff
 }
 
 
@@ -119,7 +119,7 @@ span a {
 }
 p a:hover,
 span a:hover {
-    color: #478079;
+    color: #8BAAAD;
     text-decoration: none;
 }
 .lead {
@@ -257,7 +257,7 @@ footer_links .nav-item .nav-link::after {
         background-color: #202020 !important;
     }
     .testimonial__author-info span{
-        color: #F18983 !important;
+        color: #8BAAAD !important;
     }
     .section--contact .container{
         background-color: #181818 !important;
