--- a/themes/adritian-free-hugo-theme/layouts/partials/contact.html
+++ b/themes/adritian-free-hugo-theme/layouts/partials/contact.html
@@ -5,7 +5,7 @@
             <h2>{{ i18n "contact_title" }}</h2>
             <div class="row pt-2">
                 <div class="col-12 col-lg-7">
-                    <form action="{{ .Site.Data.homepage.contact.form.action }}" method="{{ .Site.Data.homepage.contact.form.method }}">
+                    <!-- <form action="{{ .Site.Data.homepage.contact.form.action }}" method="{{ .Site.Data.homepage.contact.form.method }}">
                         <div class="row">
                             <div class="col-12 col-sm-6">
                                 <input type="text" name="full_name" id="full_name"
@@ -30,7 +30,7 @@
                                 </button>
                             </div>
                         </div>
-                    </form>
+                    </form> -->
                 </div>
                 <div class="col-12 col-lg-5 contact__info">
                     {{ if i18n "contact_phone_number" }}
